# sure-patch-automation

./: .classpath  .project  README.md  build.gradle
AutoPatchProcess/: .project
AutoPatchProcess/src/: module-info.java
AutoPatchProcess/src/autoPatch/: CMakeParser.java  CMakePreproccesor.java  Main.java  Module.java  Utils.java
AutoPatchProcess/src/main/java/: Main.java
AutoPatchProcess/src/util/: CodeLineUtil.java  ValidationUtil.java
src/: module-info.java
src/main/: Main.java
src/main/autopatch/: ArgumentParser.java  CMakeParser.java  CMakePreprocessor.java  CommandExecutor.java  Module.java
src/main/controller/: CommandExecutor.java
src/main/domain/: CMakeContents.java  Condition.java  Macro.java  Macros.java  Module.java  PatchInfo.java
src/main/java/: Main.java
src/main/java/controller/: CommandExecutor.java
src/main/java/model/: CMakeContents.java  Condition.java  Macro.java  Macros.java  Module.java  PatchInfo.java
src/main/java/service/: ArgumentParser.java  CMakeParser.java  CMakePreprocessor.java  MacroExtractor.java  MacroReplacer.java  ModuleInfoExtractor.java  ModuleSearcher.java
src/main/java/util/: CodeLineUtil.java  Command.java  GitManager.java  PatchInfoReviser.java  ValidationUtil.java
src/main/model/: CMakeContents.java  Condition.java  Macro.java  Macros.java  Module.java  PatchInfo.java
src/main/service/: ArgumentParser.java  CMakeParser.java  CMakePreprocessor.java  MacroExtractor.java  MacroReplacer.java  ModuleInfoExtractor.java  ModuleProcessor.java  ModuleSearcher.java
src/main/util/: CodeLineUtil.java  Command.java  GitManager.java  PatchInfoReviser.java  ValidationUtil.java
src/test/autopatch/: CMakeParserTest.java  CMakePreprocessorTest.java
src/test/engine/: CMakeLists.txt
src/test/engine/sub1/: CMakeLists.txt
src/test/engine/sub2/: CMakeLists.txt
src/test/engine/sub2/sub2-1/: CMakeLists.txt
src/test/engine/sub2/sub2_1/: CMakeLists.txt
src/test/engine/sub3/: CMakeLists.txt
src/test/engine/sub3/sub3-1/: CMakeLists.txt
src/test/engine/sub3/sub3-2/: CMakeLists.txt
src/test/engine/sub3/sub3-2/sub3-2-1/: CMakeLists.txt
src/test/engine/sub3/sub3_1/: CMakeLists.txt
src/test/engine/sub3/sub3_2/: CMakeLists.txt
src/test/engine/sub3/sub3_2/sub3_2_1/: CMakeLists.txt
src/test/engine/sub4/: CMakeLists.txt
src/test/java/service/: CMakeParserTest.java  CMakePreprocessorTest.java  (+2 more)
src/test/service/: ModuleSearcherTest.java
(+7 files in other folders)
